 - new     : Added keybindings section to README
 - fixed   : Clicking on Edit Schedule in the Recording Details screen when the schedule no longer exists how shows an error message
 - fixed   : Attempting to watch live tv on tuner which is already recording on a slave backend no longer fails silently
 - update  : IMDbPy updated to 4.5.1  
 
01/17/2010 - MythBox SVN 1797
=============================
 - new     : Watch Recordings screen rewritten in WindowXML
 - wip     : TV Guide screen temporarily disabled -- work in progress
 - new     : Home screen coverflow now supports a context menu from which you can delete or re-rerecord the recording
 - new     : Twitter feed of mythbox news events added to the bottom of the home screen
 - new     : Public twitter feeds can be added to the news feed from Settings -> Advanced -> Twitter
 - update  : Codebase purged of all legacy windowing/skinning code (non-WindowXML)
 - fixed   : File cache thread safety issues fixed
 - new     : All screens with listboxes now restore the last selected listitem
 - fixed   : Unnecessary induced reject on all but the first myth connection negotiation   
 - updated : The 'x' in the mythbox logo fixed to match the xbmc logo (tnx Jezz_X)
 - fixed   : Home screen coverflow images scaled instead of stretched
 - fixed   : Delete recording thumbnail from cache when recording deleted or marked for re-record
 - updated : Added Q15 to the FAQ - Connect to MySQL failed: 1156 (08S01): Got packets out of order,10000)
 - updated : IMDbPy updated to download higher resolution box covers (4.5)
 - new     : Tuners table on home screen now shows the time of the next scheduled recording if the tuner is currently idle
 - fixed   : Cover flow on Home screen would not get updated when a recording was deleted from the Recording Details screen
 - fixed   : Issue 70 - recordings not visible in Recording Schedules screen